# LLMGA

./: README.md  pip.sh  pyproject.toml  requirements.txt  test-llmga13b-sd15-inpainting.sh  test-llmga13b-sdxl-inpainting.sh  test-llmga13b-sdxl.sh  test-llmga7b-sdxl.sh  test2-llmga13b-sd15.sh  test2-llmga7b-sd15.sh  train_LLMGA_7b_S1.sh  train_LLMGA_SDXL_S2_inpaint.sh
docs/: Data.md
llmga/diffusers/: pipeline_semantic_stable_diffusion_img2img_solver_lpw.py  pipeline_semantic_stable_diffusion_img2img_solver_lpw_mask.py  scheduling_dpmsolver_multistep_inject.py  train_text_to_image.py  (+3 more)
scripts/: pretrain_gemma.sh  pretrain_llama3.sh  pretrain_mistral.sh  pretrain_phi3.sh  pretrain_qwen2-05b.sh  pretrain_qwen2-15b.sh  pretrain_qwen2-7b.sh  pretrain_vicuna_13b.sh  pretrain_vicuna_7b.sh  run_gradio_t2i.sh  test-2.sh  test-llmga-sd15-editing.sh  test-llmga-sd15-inpainting.sh  test-llmga-sd15-t2i.sh  test-llmga-sdxl-inpainting.sh  test-llmga13b-sd15-inpainting.sh  test-llmga13b-sd15.sh  test-llmga13b-sdxl-inpainting.sh  test-llmga13b-sdxl.sh  test-llmga7b-sd15-inpainting.sh  test-llmga7b-sd15.sh  test-llmga7b-sdxl-inpainting.sh  test-llmga7b-sdxl.sh  test.sh  test2-llmga-sdxl-t2i.sh  test2-llmga13b-sd15.sh  test2-llmga13b-sdxl.sh  test2-llmga7b-sd15.sh  test2-llmga7b-sdxl.sh  train_LLMGA_13b_S1.sh  train_LLMGA_7b_S1.sh  train_LLMGA_SD15_S2.sh  train_LLMGA_SD15_S2_inpaint.sh  train_LLMGA_SDXL_S2.sh  train_LLMGA_SDXL_S2_inpaint.sh  train_llmga_s1_05b_qwen2.sh  train_llmga_s1_13b_vicuna.sh  train_llmga_s1_15b_qwen2.sh  train_llmga_s1_2b_gemma.sh  train_llmga_s1_3b_phi3.sh  (+8 more)
(+56 files in other folders)
